# symspell

./: Cargo.toml  README.md
examples/: demo.rs
src/: edit_distance.rs  lib.rs  string_strategy.rs  symspell.rs  wordmap.rs
