[package]
name = "symspell"
version = "0.4.1"
edition = "2018"
license = "MIT"
authors = ["Rene Klacan <rene.klacan@gmail.com>"]
keywords = ["spellcheck"]
description = "Spelling correction & Fuzzy search"
homepage = "https://github.com/reneklacan/symspell"
repository = "https://github.com/reneklacan/symspell"
exclude = [
    "data/*",
]

[dependencies]
ahash = "0.7.6"
hashbrown = "0.11.2"
triple_accel = "0.4.0"
strsim = "^0.10"
derive_builder = "^0.9"
serde = { version = "1.0", features = ["derive"], optional = true }
unidecode = "^0.3"

[dev-dependencies]
